<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthTrac</string>
    <string name="login">Login</string>
    <string name="welcome">Welcome to HealthTrac</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="title_activity_dashboard">Dashboard Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="delete_message_title">Delete Message?</string>
    <string name="delete_message_content">Are you sure you want to delete this message?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="goal">Goal</string>
    <string name="consumed">Consumed</string>
    <string name="burned">Burned</string>
    <string name="remaining">Remaining</string>
    <string name="daily_nutrition_summary">Daily Nutritional Summary</string>
    <string name="nutrition_summary">Nutritional Summary</string>
    <string name="nutritional_info">NUTRITIONAL INFO</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fiber">Fiber</string>
    <string name="sugars">Sugars</string>
    <string name="sugar">Sugar</string>
    <string name="protein">Protein</string>
    <string name="total_fat">Total Fat</string>
    <string name="sat_fat">Sat. Fat</string>
    <string name="saturated_fat">Saturated Fat</string>
    <string name="sodium">Sodium</string>
    <string name="fat">Fat</string>
    <string name="update_calories_goal">Update calories goal?</string>
    <string name="enter_new_calories_goal">Enter a new calories goal</string>
    <string name="update">Update</string>
    <string name="save_myplans">Save to My Plans?</string>
    <string name="enter_name">Enter a name to save this plan to My Plans for future use</string>
    <string name="save">Save</string>
    <string name="myfavorites">My Favorites</string>
    <string name="recommended">Recommended</string>
    <string name="general_fooditem">General Food Item</string>
    <string name="additional_fields">Additional Fields</string>
    <string name="type">Type</string>
    <string name="snack">Snack</string>
    <string name="meal">Meal</string>
    <string name="am_meal">AM Meal</string>
    <string name="pm_meal">PM Meal</string>
    <string name="other">Other</string>
    <string name="preparation_effort">Preparation Effort</string>
    <string name="ready_to_eat">Ready to Eat</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="keywords">Keywords</string>
    <string name="products">Products</string>
    <string name="include">Include</string>
    <string name="only_products">Only Products</string>
    <string name="no_products">No Products</string>
    <string name="refine_search">Refine search to narrow results</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_planner">Add to Planner</string>
    <string name="text_reminder">Text Reminder</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="number_of_servings">Number of Servings</string>
    <string name="servings">Servings</string>
    <string name="note">Note</string>
    <string name="exercise">Exercise</string>
    <string name="stress_management">Stress Management</string>
    <string name="duration_minutes">Duration (minutes)</string>
    <string name="calories_burned">Calories Burned</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="activity_level">Activity Level</string>
    <string name="calculate">CALCULATE</string>
    <string name="sender_id">131812342616</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="avg">Avg</string>
    <string name="total">Total:</string>
    <string name="add_food">\u0020Add Food</string>
    <string name="add_exercise">\u0020Add Exercise</string>
    <string name="add_note">\u0020Add Note</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snacks">Snacks</string>
    <string name="notes">Notes</string>
    <string name="nutrition">Nutrition</string>
    <string name="create_favorites">Create Favorites</string>
    <string name="create_plan">Create Plan</string>
    <string name="recent_capital">RECENT</string>
    <string name="allfoods_capital">ALL FOODS</string>
    <string name="favorites_capital">FAVORITES</string>
    <string name="recommended_capital">RECOMMENDED</string>
    <string name="allexercises_capital">ALL EXERCISES</string>
    <string name="brand">Brand</string>
    <string name="serving_size">Serving Size</string>
    <string name="average">Average</string>
    <string name="highest">Highest</string>
    <string name="lowest">Lowest</string>
    <string name="totalstr">Total</string>
    <string name="photo">Photo</string>
    <string name="food_photos">Food Photos</string>
    <string name="plan">Plan</string>
    <string name="choose_meals_for_me">Choose Meals For Me!</string>
    <string name="share_plan">Share Plan</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="mealtype_starter">Meal Type/Starter</string>
    <string name="smoothie">Smoothie</string>
    <string name="soup">Soup</string>
    <string name="pasta">Pasta</string>
    <string name="egg">Egg</string>
    <string name="grocery">Grocery</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="show_password">Show Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="mobile_carrier">Mobile Carrier</string>
    <string name="ok_to_text">OK to Text?</string>
    <string name="time_zone">Time Zone</string>
    <string name="address1">Address 1</string>
    <string name="address2">Address 2</string>
    <string name="city">City</string>
    <string name="state_province">State/Province</string>
    <string name="zip_postal_code">Zip/Postal Code</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="weight_goal">Weight Goal</string>
    <string name="current_weight">Current Weight</string>
    <string name="no_beef">No beef</string>
    <string name="no_pork">No pork</string>
    <string name="no_fish">No fish</string>
    <string name="no_shellfish">No shellfish</string>
    <string name="no_dairy">No dairy</string>
    <string name="no_egg">No egg</string>
    <string name="no_soy">No soy</string>
    <string name="no_gluten">No gluten</string>
    <string name="no_wheat">No wheat</string>
    <string name="no_tree_nuts">No tree nuts</string>
    <string name="no_peanuts">No peanuts</string>
    <string name="no_meat">No meat (vegetarian)</string>
    <string name="addtional_food_introduction">Please list additional food restrictions below, separated by commas.\n\nExample: strawberry, potato, kale\n\nBy listing these restrictions below, you ensure that the Recommended Food search and Eating Plan Template tools in the app will present you with only meals that do not contain these foods.</string>
</resources>
