<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayoutPlannerNutrition"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ht_white"
    tools:context=".planner.HTPlannerNutritionActivity">

    <ScrollView
        android:id="@+id/scrollViewNutritionDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="44dp"
        android:background="@color/ht_gray_separator"
        android:fillViewport="true"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layoutNutritionDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:minLines="2"
                android:textColor="@color/ht_gray_title_text"
                android:textSize="16sp"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/ht_white"
                android:id="@+id/caloriesPlanView">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:id="@+id/goalView"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goal"
                        android:id="@+id/goalLabel"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/goalValue"
                        android:background="@drawable/ht_goalbtn_bg"
                        android:gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="21sp"
                        android:text="1200" />
                </LinearLayout>

                <View
                    android:id="@+id/viewGraySeparator1"
                    android:layout_width="2dp"
                    android:layout_height="38dp"
                    android:background="#fff2f6f7"
                    android:layout_gravity="center_vertical" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:id="@+id/consumedView"
                    android:layout_gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consumed"
                        android:id="@+id/consumedLabel"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="11sp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/consumedValue"
                        android:gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="21sp" />
                </LinearLayout>
                <View
                    android:id="@+id/viewGraySeparator2"
                    android:layout_width="2dp"
                    android:layout_height="38dp"
                    android:background="#fff2f6f7"
                    android:layout_gravity="center_vertical" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:id="@+id/burnedView"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/burned"
                        android:id="@+id/burnedLabel"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="11sp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/burnedValue"
                        android:gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="21sp" />
                </LinearLayout>
                <View
                    android:id="@+id/viewGraySeparator3"
                    android:layout_width="2dp"
                    android:layout_height="38dp"
                    android:background="#fff2f6f7"
                    android:layout_gravity="center_vertical" />
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:id="@+id/remainingView"
                    android:layout_gravity="center_vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remaining"
                        android:id="@+id/remainingLabel"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="11sp"
                        android:layout_gravity="center_horizontal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/remainingValue"
                        android:gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="21sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_nutrition_summary"
                android:id="@+id/summaryLabel"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:textColor="@color/ht_gray_title_text"
                android:textSize="12sp" />

            <View
                android:id="@+id/viewblueSeparator"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="6dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/ht_blue"
                android:layout_gravity="center_vertical" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/ht_white"
                android:paddingLeft="16dp"
                android:paddingTop="10dp"
                android:paddingRight="16dp"
                android:paddingBottom="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/calories"
                        android:layout_centerVertical="true"
                        android:id="@+id/caloriesLabel"
                        android:textColor="@color/ht_gray_title_text"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:id="@+id/caloriesValue"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="20sp"
                        android:textColor="@color/ht_gray_title_text" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="#f2f6f7"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carbs"
                        android:id="@+id/carbsLabel"
                        android:layout_centerVertical="true"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/carbsValue"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="11sp"
                        android:textColor="@color/ht_gray_title_text" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fiber"
                        android:id="@+id/fiberLabel"
                        android:layout_centerVertical="true"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/fiberValue"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="11sp"
                        android:textColor="@color/ht_gray_title_text" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f2f6f7"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sugars"
                        android:id="@+id/sugarsLabel"
                        android:layout_centerVertical="true"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sugarsValue"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="11sp"
                        android:textColor="@color/ht_gray_title_text" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/protein"
                        android:id="@+id/proteinLabel"
                        android:layout_centerVertical="true"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/proteinValue"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="11sp"
                        android:textColor="@color/ht_gray_title_text" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f2f6f7"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_fat"
                        android:id="@+id/totalFatLabel"
                        android:layout_centerVertical="true"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/totalFatValue"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="11sp"
                        android:textColor="@color/ht_gray_title_text" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sat_fat"
                        android:id="@+id/satfatLabel"
                        android:layout_centerVertical="true"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/satfatValue"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="11sp"
                        android:textColor="@color/ht_gray_title_text" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#f2f6f7"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sodium"
                        android:id="@+id/sodiumLabel"
                        android:layout_centerVertical="true"
                        android:textSize="11sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/sodiumValue"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:textSize="11sp"
                        android:textColor="@color/ht_gray_title_text" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
